<resources>
    <string name="app_name">My Note</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="DeleteNote">Are you Sure ?</string>
    <string name="nav_starred">Starred</string>
    <string name="nav_home">Home</string>
    <string name="nav_remainders">Remainders</string>
    <string name="nav_todo">To-Dos</string>
    <string name="nav_checklists">Checklists</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about_us">About Us</string>
    <string name="empty_note">Add your Notes :)</string>
    <string name="open_drawer">open</string>
    <string name="close_drawer">close</string>
    <string name="google_plus_login">Log In</string>
    <string name="google_plus_logout">Log Out</string>
    <string name="mark_as_starred">Mark as starred</string>
    <string name="save_note">Save</string>
    <string name="delete_note">Delete</string>
    <string name="because_of"> because of </string><string name="GPlus">G+ SignIn </string>
    <string name="no_internet_connection">"Please check your internet connection"</string>
    <string name="mark_as_unstarred">Mark as unstarred</string>
    <string name="sign_in_success">Welcome to your Note :P</string>
    <string name="sign_up_success">Welcome to your Note :P</string>
    <string name="sign_in_fail">SignIn failed :( </string>
    <string name="sign_up_fail">SignUp failed :( </string>
    <string name="hint_name">Full Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_sign_up">Register</string>
    <string name="err_msg_name">I love hearing your name</string>
    <string name="err_msg_email">Please enter valid Email Id</string>
    <string name="err_msg_password">There are sneakers outside</string>
    <string name="err_msg_password_login">Please enter password</string>
    <string name="forgot_password">forgot password?</string>
    <string name="reset_password">Reset Password</string>
    <string name="verify_email">Please verify your EmailId before login</string>
    <string name="username_or_password_is_wrong">Username or Password is wrong</string>
    <string name="resend_verification">Resend Verification</string>
    <string name="send_verification">Send Verification</string>
    <string name="email_mismatch">Seems like submitted email has been changed. Please check.</string>
    <string name="reset_password_fail">Reset email not sent. Something went wrong</string>
    <string name="reset_mail_sent">Password reset email is sent</string>

    <!-- Strings for contextual toolbar-->
    <string name="delete">delete</string>
    <string name="copy">copy</string>
    <string name="share">share</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_google">GoogleActivity</string>
    <string name="title_activity_signup">SignupActivity</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="about_us_1">MyNote is developed by dedicated team at programmingcub.</string>
    <string name="about_us_2">This is the first app developed by our team. If you want to learn android development,
    please check our tutorials at \n<a href="https://programmingcub.wordpress.com/">https://programmingcub.wordpress.com/</a></string>
    <string name="about_us_3">You can follow us at \n<a href="https://www.facebook.com/ProgrammingCub/">https://www.facebook.com/ProgrammingBear/</a></string>

</resources>
