<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/activity_about_us"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.programmingbear.mynote.AboutUs"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_us_1"
        android:padding="4dp"
        android:textColor="@android:color/black"
        android:textSize="20sp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_us_2"
        android:padding="4dp"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:autoLink="web"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_us_3"
        android:padding="4dp"
        android:textColor="@android:color/black"
        android:autoLink="web"
        android:textSize="20sp"/>

</LinearLayout>
