<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:id="@+id/coordinatorLayout"
    android:background="@color/colorPrimary"
    >
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        >
    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="100dp">


        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">

            <EditText
                android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/hint_email" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/hint_password" />
        </android.support.design.widget.TextInputLayout>

        <Button android:id="@+id/btn_login"
                android:layout_width="fill_parent"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_height="wrap_content"
                android:text="@string/action_sign_in_short"
                android:layout_marginTop="20dp"
                android:textColor="@android:color/black"
                android:theme="@style/MyButton" />
        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:textColor="@color/colorAccent"
            android:paddingTop="15dp"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:id="@+id/fp_textview"/>
        <Button android:id="@+id/send_verification"
                android:layout_width="fill_parent"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_height="wrap_content"
                android:text="@string/send_verification"
                android:layout_marginTop="20dp"
                android:textColor="@android:color/black"
                android:theme="@style/MyButton"
                android:visibility="gone"/>
    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>